--- a/index.html
+++ b/index.html
@@ -1,23 +1,45 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>MTM Coin</title>
     <style>
-        body { background: #000; color: white; text-align: center; font-family: sans-serif; height: 100vh; margin: 0; overflow: hidden; display: flex; flex-direction: column; }
+        /* التنسيقات العامة */
+        body { 
+            background: #000; color: white; text-align: center; font-family: sans-serif; 
+            height: 100vh; margin: 0; overflow: hidden; display: flex; flex-direction: column; 
+        }
         .page { display: none; flex-grow: 1; flex-direction: column; justify-content: center; align-items: center; padding: 20px; }
         .active { display: flex; }
+
+        /* الشاشة الرئيسية */
         .score-box { font-size: 3.5rem; color: #f1c40f; font-weight: bold; margin-bottom: 10px; }
-        .coin-img { width: 240px; height: 240px; cursor: pointer; transition: transform 0.05s; -webkit-tap-highlight-color: transparent; filter: drop-shadow(0 0 15px #f1c40f); }
+        .coin-img { 
+            width: 240px; height: 240px; cursor: pointer; transition: transform 0.05s; 
+            -webkit-tap-highlight-color: transparent; filter: drop-shadow(0 0 15px #f1c40f); 
+        }
         .coin-img:active { transform: scale(0.92); }
-        .card { background: #1a1a1a; width: 90%; padding: 15px; border-radius: 12px; margin-bottom: 10px; display: flex; justify-content: space-between; align-items: center; border: 1px solid #333; }
-        .btn-action { background: #f1c40f; color: black; border: none; padding: 8px 15px; border-radius: 8px; font-weight: bold; cursor: pointer; }
-        .btn-done { background: #2ecc71; color: white; cursor: default; }
+
+        /* نظام المهام */
+        .card { 
+            background: #1a1a1a; width: 90%; padding: 15px; border-radius: 12px; 
+            margin-bottom: 10px; display: flex; justify-content: space-between; 
+            align-items: center; border: 1px solid #333; 
+        }
+        .btn-action { 
+            background: #f1c40f; color: black; border: none; padding: 10px 20px; 
+            border-radius: 8px; font-weight: bold; cursor: pointer; min-width: 80px;
+        }
+        .btn-done { background: #2ecc71 !important; color: white !important; cursor: default; }
+
+        /* شريط الطاقة */
         .energy-container { width: 85%; margin-top: 30px; }
-        .energy-bar { background: #222; height: 12px; border-radius: 10px; overflow: hidden; }
-        .energy-fill { background: #f1c40f; height: 100%; width: 100%; transition: width 0.2s; }
-        .nav-bar { background: #111; display: flex; justify-content: space-around; padding: 15px 0; border-top: 1px solid #333; padding-bottom: 25px; }
+        .energy-bar { background: #222; height: 12px; border-radius: 10px; overflow: hidden; border: 1px solid #333; }
+        .energy-fill { background: linear-gradient(90deg, #f1c40f, #e67e22); height: 100%; width: 100%; transition: width 0.2s; }
+
+        /* شريط التنقل السفلي */
+        .nav-bar { background: #111; display: flex; justify-content: space-around; padding: 15px 0; border-top: 1px solid #333; padding-bottom: env(safe-area-inset-bottom, 25px); }
         .nav-item { color: #888; cursor: pointer; font-size: 0.8rem; text-align: center; }
         .nav-item.active-nav { color: #f1c40f; font-weight: bold; }
     </style>
@@ -26,9 +48,9 @@
 
     <div id="homePage" class="page active">
         <div class="score-box" id="score">0</div>
-        <img src="coin.png" class="coin-img" id="coinBtn">
+        <img src="coin.png" class="coin-img" id="coinBtn" alt="MTM Coin">
         <div class="energy-container">
-            <div style="margin-bottom: 5px;">⚡ <span id="energyVal">1000</span> / 1000</div>
+            <div style="margin-bottom: 8px;">⚡ <span id="energyVal">1000</span> / 1000</div>
             <div class="energy-bar"><div class="energy-fill" id="energyBar"></div></div>
         </div>
     </div>
@@ -36,16 +58,20 @@
     <div id="tasksPage" class="page">
         <h2>المهام 🏆</h2>
         <div class="card">
-            <div style="text-align: right;"><div>اشتراك القناة</div><div style="color: #f1c40f;">+50,000</div></div>
+            <div style="text-align: right;">
+                <div style="font-weight: bold;">الاشتراك في القناة</div>
+                <div style="color: #f1c40f; font-size: 0.9rem;">+50,000 MTM</div>
+            </div>
             <button id="taskBtn" class="btn-action" onclick="doTask('https://t.me/MTM_coin', 50000)">ابدأ</button>
         </div>
     </div>
 
     <div id="friendsPage" class="page">
-        <h2>الأصدقاء 👥</h2>
+        <h2>دعوة الأصدقاء 👥</h2>
         <div class="card" style="flex-direction: column; gap: 15px;">
-            <div id="refLink" style="font-size: 0.8rem; color: #f1c40f;">https://t.me/MTM_Coin_App_bot?start=user</div>
-            <button class="btn-action" onclick="copyLink()">نسخ الرابط</button>
+            <p style="margin: 0; color: #aaa;">رابط الدعوة الخاص بك:</p>
+            <div id="refLink" style="font-size: 0.8rem; color: #f1c40f; word-break: break-all;">https://t.me/MTM_Coin_App_bot?start=user</div>
+            <button class="btn-action" style="width: 100%;" onclick="copyLink()">نسخ الرابط</button>
         </div>
     </div>
 
@@ -56,6 +82,7 @@
     </div>
 
     <script>
+        // تحميل البيانات من الذاكرة
         let score = parseInt(localStorage.getItem('mtm_score')) || 0;
         let energy = parseInt(localStorage.getItem('mtm_energy')) || 1000;
         let taskDone = localStorage.getItem('mtm_task_sub') === 'true';
@@ -63,12 +90,11 @@
         function updateUI() {
             document.getElementById('score').innerText = score.toLocaleString();
             document.getElementById('energyVal').innerText = energy;
-            document.getElementById('energyBar').style.width = (energy/1000*100) + "%";
+            document.getElementById('energyBar').style.width = (energy / 1000 * 100) + "%";
             
-            // تحديث شكل زر المهمة إذا كانت مكتملة
+            // تحديث حالة زر المهمة (إصلاح الثغرة)
             if (taskDone) {
                 const btn = document.getElementById('taskBtn');
-                btn.innerText = "مكتمل ✅";
-                btn.classList.add('btn-done');
-                btn.onclick = null;
-            }
+                if (btn) {
+                    btn.innerText = "مكتمل ✅";
+                    btn.classList.
