--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>MTM Coin</title>
     <style>
-        /* التنسيقات العامة */
         body { 
             background: #000; color: white; text-align: center; font-family: sans-serif; 
             height: 100vh; margin: 0; overflow: hidden; display: flex; flex-direction: column; 
@@ -13,7 +12,6 @@
         .page { display: none; flex-grow: 1; flex-direction: column; justify-content: center; align-items: center; padding: 20px; }
         .active { display: flex; }
 
-        /* الشاشة الرئيسية */
         .score-box { font-size: 3.5rem; color: #f1c40f; font-weight: bold; margin-bottom: 10px; }
         .coin-img { 
             width: 240px; height: 240px; cursor: pointer; transition: transform 0.05s; 
@@ -21,7 +19,6 @@
         }
         .coin-img:active { transform: scale(0.92); }
 
-        /* نظام المهام */
         .card { 
             background: #1a1a1a; width: 90%; padding: 15px; border-radius: 12px; 
             margin-bottom: 10px; display: flex; justify-content: space-between; 
@@ -29,18 +26,16 @@
         }
         .btn-action { 
             background: #f1c40f; color: black; border: none; padding: 10px 20px; 
-            border-radius: 8px; font-weight: bold; cursor: pointer; min-width: 80px;
+            border-radius: 8px; font-weight: bold; cursor: pointer;
         }
         .btn-done { background: #2ecc71 !important; color: white !important; cursor: default; }
 
-        /* شريط الطاقة */
         .energy-container { width: 85%; margin-top: 30px; }
-        .energy-bar { background: #222; height: 12px; border-radius: 10px; overflow: hidden; border: 1px solid #333; }
-        .energy-fill { background: linear-gradient(90deg, #f1c40f, #e67e22); height: 100%; width: 100%; transition: width 0.2s; }
+        .energy-bar { background: #222; height: 12px; border-radius: 10px; overflow: hidden; }
+        .energy-fill { background: #f1c40f; height: 100%; width: 100%; transition: width 0.2s; }
 
-        /* شريط التنقل السفلي */
-        .nav-bar { background: #111; display: flex; justify-content: space-around; padding: 15px 0; border-top: 1px solid #333; padding-bottom: env(safe-area-inset-bottom, 25px); }
-        .nav-item { color: #888; cursor: pointer; font-size: 0.8rem; text-align: center; }
+        .nav-bar { background: #111; display: flex; justify-content: space-around; padding: 15px 0; border-top: 1px solid #333; padding-bottom: 25px; }
+        .nav-item { color: #888; cursor: pointer; font-size: 0.8rem; text-align: center; flex: 1; }
         .nav-item.active-nav { color: #f1c40f; font-weight: bold; }
     </style>
 </head>
@@ -59,42 +54,20 @@
         <h2>المهام 🏆</h2>
         <div class="card">
             <div style="text-align: right;">
-                <div style="font-weight: bold;">الاشتراك في القناة</div>
-                <div style="color: #f1c40f; font-size: 0.9rem;">+50,000 MTM</div>
+                <div>الاشتراك في القناة</div>
+                <div style="color: #f1c40f;">+50,000</div>
             </div>
-            <button id="taskBtn" class="btn-action" onclick="doTask('https://t.me/MTM_coin', 50000)">ابدأ</button>
+            <button id="taskBtn" class="btn-action" onclick="doTask()">ابدأ</button>
         </div>
     </div>
 
     <div id="friendsPage" class="page">
-        <h2>دعوة الأصدقاء 👥</h2>
+        <h2>الأصدقاء 👥</h2>
         <div class="card" style="flex-direction: column; gap: 15px;">
-            <p style="margin: 0; color: #aaa;">رابط الدعوة الخاص بك:</p>
-            <div id="refLink" style="font-size: 0.8rem; color: #f1c40f; word-break: break-all;">https://t.me/MTM_Coin_App_bot?start=user</div>
+            <div id="refLink" style="font-size: 0.8rem; color: #f1c40f;">https://t.me/MTM_Coin_App_bot?start=user</div>
             <button class="btn-action" style="width: 100%;" onclick="copyLink()">نسخ الرابط</button>
         </div>
     </div>
 
     <div class="nav-bar">
-        <div class="nav-item active-nav" id="navHome" onclick="showPage('home')">🏠<br>الرئيسية</div>
-        <div class="nav-item" id="navTasks" onclick="showPage('tasks')">📋<br>المهام</div>
-        <div class="nav-item" id="navFriends" onclick="showPage('friends')">👥<br>الأصدقاء</div>
-    </div>
-
-    <script>
-        // تحميل البيانات من الذاكرة
-        let score = parseInt(localStorage.getItem('mtm_score')) || 0;
-        let energy = parseInt(localStorage.getItem('mtm_energy')) || 1000;
-        let taskDone = localStorage.getItem('mtm_task_sub') === 'true';
-
-        function updateUI() {
-            document.getElementById('score').innerText = score.toLocaleString();
-            document.getElementById('energyVal').innerText = energy;
-            document.getElementById('energyBar').style.width = (energy / 1000 * 100) + "%";
-            
-            // تحديث حالة زر المهمة (إصلاح الثغرة)
-            if (taskDone) {
-                const btn = document.getElementById('taskBtn');
-                if (btn) {
-                    btn.innerText = "مكتمل ✅";
-                    btn.classList.
+        <div class="nav-item active-nav" onclick="showPage('home', this)">🏠
